# py-fastapi-template

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-and-push-all.yaml  build-and-push.yaml  on-version-tag.yaml  pytest.yaml
api/: Dockerfile  main.py  requirements.txt
api/config/: config.dev.yaml  config.local.yaml  config.prod.yaml  config.staging.yaml
api/core/: auth.py  config.py  dev_routes.py
deploy/: run.yaml
docker/: Dockerfile
scripts/: setup_dev_env.bat  setup_dev_env.sh
shared/: requirements-dev.txt  requirements.txt
shared/core/: app_environment.py  catch_exception_middleware.py  config.py  logging.py  request_context.py  system.py
shared/services/: base_service.py  file_storage.py  gcp_sql_db.py  gcs_file_storage.py  local_file_storage.py  s3_file_storage.py  service.py  sftp_file_storage.py  sql_db.py
shared/utils/: datetime_utils.py  gcp_auth.py  gcp_logging.py  math_utils.py  size_utils.py  upload_image_file.py
src/: main.py
src/api/v1/: system.py
src/core/: config.py
tests/: config.yaml  conftest.py  requirements.txt
tests/api/: test_auth.py  test_routes.py  test_s3_file_storage.py  test_system.py
tests/utils/: fastapi_utils.py  random_utils.py  route_utils.py
