[project]
name = "py-fastapi-template"
version = "0.1.0"
description = "FastAPI Template Project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.31.0",
    "packaging>=25.0",
    "py-cpuinfo>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "shared"]

# Uncomment locally to silence Failed to hardlink files
# This can happen if the filesystem does not support hardlinks across different drives
# [tool.uv]
# link-mode = "copy"

[dependency-groups]
# Some dependencies are purely dev or test
# others are runtime dependencies here to be promoted once used in live code
dev = [ 
    "pillow>=12.0.0",
    "google-auth>=2.43.0",
    "requests>=2.32.5", # used internally by google-auth but not automatically installed
    "aioboto3>=15.5.0", # used for s3-like buckets
    "paramiko>=4.0.0",
    "black>=25.11.0",
    "ruff>=0.14.8",
    "pre-commit>=4.5.0",
    "detect-secrets>=1.5.0",
    "google-cloud-storage>=3.6.0", # used for gcs buckets
    "cloud-sql-python-connector[asyncpg]>=1.18.5", # used for google cloud sql only
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "psycopg[binary]>=3.3.2",
    "pytest-postgresql>=7.0.2",
]

[tool.black]
line-length = 120
target-version = ['py313']
skip-string-normalization = false

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
lint.fixable = ["ALL"]
lint.select = ["ALL"]
# Ignore specific rules if they conflict with Black or are not desired
lint.ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "D200", "D202", "D212", "D203", # Docstring related rules for public modules, classes, functions.
    "COM812", "RET505", # Code style customizations
    "E501", # Line too long (handled by Black)
    "FIX", "TD"] # Fixme and TODO comments


[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Allow use of assert statements in test files

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
postgresql_port = "5454" # Port for pytest-postgresql, to avoid conflicts with local Postgres instances


